# gym_form_checker

./: .env.example  .gitignore  README.md  REPRODUCIBILITY.md  links_to_videos.txt  pyproject.toml
notebooks/: 01_eda_dataset.ipynb  02_model_training.ipynb
paper/: gym_form_checker.tex
presentation/: presentation.html
scripts/: download_videos.py  run_demo.py  run_eda.py  test_bar_path.py  train_all.py
src/form_checker/: __init__.py  angle_calculator.py  form_rules.py  mediapipe_compat.py  rep_counter.py  video_processor.py
