[project]
name = "gym-form-checker"
version = "0.1.0"
description = "Prototipo para evaluar la técnica de ejercicios (Squat, Pushup, Deadlift) usando YOLOv8 y MediaPipe"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gabriel Bohorquez" }
]

dependencies = [
    "ultralytics>=8.3.0",
    "mediapipe>=0.10.0",
    "roboflow>=1.1.41",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "tqdm>=4.66.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/form_checker"]

[tool.ruff]
line-length = 100
target-version = "py310"
